<resources>
    <string name="app_name">SimpleX</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register_new">Register New</string>
    <string name="sign_in">Sign In</string>
    <string name="country">Country</string>
    <string name="ireland">Ireland</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
</resources>
